# chessbot

./: .firebaserc  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  Start Chess Coach.command  fly.toml  game_log.jsonl
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/routes/: analysis.py  realtime.py
backend/app/models/: chess.py  move_analysis.py  position_features.py  validation.py
backend/app/services/: analysis_cache.py  background_analyzer.py  cache_service.py  claude_service.py  coach_service.py  game_analyzer.py  game_logger.py  interjection_service.py  move_analysis_service.py  openai_realtime_service.py  position_analyzer.py  response_validator.py  stockfish_service.py  voice_context_service.py
backend/tests/: __init__.py  conftest.py  test_analysis_cache.py  test_analyze_range.py  test_cache_service.py  test_game_analyzer.py  test_move_analysis.py  test_position_analyzer.py  test_response_validator.py  test_voice_context.py
backend/tests/fixtures/: test_game.pgn
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: ConversationTranscript.tsx  GameModeToggle.tsx  GameReport.tsx  SettingsModal.tsx  UnifiedChatPanel.tsx
frontend/src/hooks/: useAnalysisCache.ts  useAudioDevices.ts  useChessGame.ts  useCoach.ts  useCoachGame.ts  useGameAnalysis.ts  useSettings.ts  useUnifiedCoach.ts  useUnifiedVoice.ts  (+1 more)
scripts/: download-stockfish.sh
(+14 files in other folders)
