[project]
name = "chessbot-backend"
version = "0.1.0"
description = "Chess coaching backend with Stockfish + Claude"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-chess>=1.11.0",
    "anthropic>=0.40.0",
    "python-multipart>=0.0.17",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
